--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint src --ext .ts --fix",
     "test": "vitest --run",
     "test:silent": "vitest --run --silent",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "build": "tsup src --out-dir build"
   },
   "keywords": [],
   "author": "jhonnydelima",
